@@ -256,6 +256,7 @@ class ConfigManager
 			DEATH_LIST,
 			GHOST_SPELL_EFFECTS,
 			PVPZONE_ADDMANASPENT,
+			PVPZONE_RECOVERMANA,
 			ALLOW_FIGHTBACK,
 			VIPLIST_PER_PLAYER,
 			USE_FRAG_HANDLER,
