@@ -263,7 +263,7 @@ int32_t Game::loadMap(std::string filename)
 	return map->loadMap(getFilePath(FILE_TYPE_OTHER, std::string("world/" + filename + ".otbm")));
 }
 
-void Game::cleanMap(uint32_t& count)
+void Game::cleanMapEx(uint32_t& count)
 {
 	uint64_t start = OTSYS_TIME();
 	uint32_t tiles = 0; count = 0;
@@ -306,8 +306,6 @@ void Game::cleanMap(uint32_t& count)
 						++tit;
 				}
 			}
-
-			trash.clear();
 		}
 		else
 		{
@@ -337,9 +335,9 @@ void Game::cleanMap(uint32_t& count)
 						++tit;
 				}
 			}
-
-			trash.clear();
 		}
+
+		trash.clear();
 	}
 	else if(g_config.getBool(ConfigManager::CLEAN_PROTECTED_ZONES))
 	{
@@ -413,6 +411,12 @@ void Game::cleanMap(uint32_t& count)
 		std::clog << " (" << marked << " were marked)";
 
 	std::clog << " in " << (OTSYS_TIME() - start) / (1000.) << " seconds." << std::endl;
+}
+
+void Game::cleanMap()
+{
+	uint32_t dummy;
+	cleanMapEx(dummy);
 }
 
 void Game::proceduralRefresh(RefreshTiles::iterator* it/* = NULL*/)
@@ -5909,10 +5913,7 @@ void Game::globalSave()
 	Dispatcher::getInstance().addTask(createTask(boost::bind(&Game::setGameState, this, GAME_STATE_CLOSED)));
 	//clean map if configured to
 	if(g_config.getBool(ConfigManager::CLEAN_MAP_AT_GLOBALSAVE))
-	{
-		uint32_t dummy;
-		cleanMap(dummy);
-	}
+		cleanMap();
 
 	//pay houses
 	Houses::getInstance()->payHouses();
