@@ -555,7 +555,9 @@ class Game
 		void saveGameState(bool shallow);
 		void loadGameState();
 
-		void cleanMap(uint32_t& count);
+		void cleanMapEx(uint32_t& count);
+		void cleanMap();
+
 		void refreshMap(RefreshTiles::iterator* it = NULL, uint32_t limit = 0);
 		void proceduralRefresh(RefreshTiles::iterator* it = NULL);
 
